deploy: cbe02d806c1d96d4a57a7f42790d564eccb9654c

--- a/_modules/pyquizhub/core/storage/file_storage.html
+++ b/_modules/pyquizhub/core/storage/file_storage.html
@@ -335,7 +335,7 @@
 <div class="viewcode-block" id="FileStorageManager.delete_quiz">
 <a class="viewcode-back" href="../../../../core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.delete_quiz">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">delete_quiz</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">quiz_id</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Delete a quiz and all associated tokens and sessions.&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Delete a quiz and all associated tokens, sessions, and results.&quot;&quot;&quot;</span>
         <span class="kn">import</span><span class="w"> </span><span class="nn">os</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Deleting quiz with ID: </span><span class="si">{</span><span class="n">quiz_id</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
 
@@ -356,6 +356,17 @@
             <span class="k">if</span> <span class="n">sdata</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;quiz_id&quot;</span><span class="p">)</span> <span class="o">!=</span> <span class="n">quiz_id</span>
         <span class="p">}</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_write_json</span><span class="p">(</span><span class="s2">&quot;sessions.json&quot;</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">sessions</span><span class="p">)</span>
+
+        <span class="c1"># Remove associated results</span>
+        <span class="k">for</span> <span class="n">user_id</span> <span class="ow">in</span> <span class="nb">list</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">results</span><span class="o">.</span><span class="n">keys</span><span class="p">()):</span>
+            <span class="k">if</span> <span class="n">quiz_id</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">results</span><span class="p">[</span><span class="n">user_id</span><span class="p">]:</span>
+                <span class="k">del</span> <span class="bp">self</span><span class="o">.</span><span class="n">results</span><span class="p">[</span><span class="n">user_id</span><span class="p">][</span><span class="n">quiz_id</span><span class="p">]</span>
+                <span class="c1"># Clean up empty user entries</span>
+                <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">results</span><span class="p">[</span><span class="n">user_id</span><span class="p">]:</span>
+                    <span class="k">del</span> <span class="bp">self</span><span class="o">.</span><span class="n">results</span><span class="p">[</span><span class="n">user_id</span><span class="p">]</span>
+
+        <span class="c1"># Write updated results to disk</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_save_all_results</span><span class="p">()</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Deleted quiz </span><span class="si">{</span><span class="n">quiz_id</span><span class="si">}</span><span class="s2"> and all associated data&quot;</span><span class="p">)</span></div>
 
@@ -685,7 +696,29 @@
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Fetch sessions for a specific quiz and user.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
             <span class="sa">f</span><span class="s2">&quot;Fetching sessions for quiz ID: </span><span class="si">{</span><span class="n">quiz_id</span><span class="si">}</span><span class="s2"> and user ID: </span><span class="si">{</span><span class="n">user_id</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
-        <span class="k">return</span> <span class="nb">list</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">results</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">user_id</span><span class="p">,</span> <span class="p">{})</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">quiz_id</span><span class="p">,</span> <span class="p">{})</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span></div>
+
+        <span class="n">session_ids</span> <span class="o">=</span> <span class="p">[]</span>
+
+        <span class="c1"># Get completed sessions from results</span>
+        <span class="n">session_ids</span><span class="o">.</span><span class="n">extend</span><span class="p">(</span>
+            <span class="nb">list</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">results</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">user_id</span><span class="p">,</span> <span class="p">{})</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">quiz_id</span><span class="p">,</span> <span class="p">{})</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span>
+        <span class="p">)</span>
+
+        <span class="c1"># Get active sessions from sessions directory</span>
+        <span class="n">sessions_dir</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">base_dir</span><span class="p">,</span> <span class="s2">&quot;sessions&quot;</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">sessions_dir</span><span class="p">):</span>
+            <span class="k">for</span> <span class="n">session_file</span> <span class="ow">in</span> <span class="n">os</span><span class="o">.</span><span class="n">listdir</span><span class="p">(</span><span class="n">sessions_dir</span><span class="p">):</span>
+                <span class="k">if</span> <span class="n">session_file</span><span class="o">.</span><span class="n">endswith</span><span class="p">(</span><span class="s2">&quot;.json&quot;</span><span class="p">):</span>
+                    <span class="n">session_id</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">splitext</span><span class="p">(</span><span class="n">session_file</span><span class="p">)[</span><span class="mi">0</span><span class="p">]</span>
+                    <span class="c1"># Load session to check if it matches quiz_id and user_id</span>
+                    <span class="n">session_data</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">load_session_state</span><span class="p">(</span><span class="n">session_id</span><span class="p">)</span>
+                    <span class="k">if</span> <span class="p">(</span><span class="n">session_data</span> <span class="ow">and</span>
+                        <span class="n">session_data</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;quiz_id&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="n">quiz_id</span> <span class="ow">and</span>
+                        <span class="n">session_data</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;user_id&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="n">user_id</span> <span class="ow">and</span>
+                        <span class="n">session_id</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">session_ids</span><span class="p">):</span>
+                        <span class="n">session_ids</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">session_id</span><span class="p">)</span>
+
+        <span class="k">return</span> <span class="n">session_ids</span></div>
 
 
 <div class="viewcode-block" id="FileStorageManager.save_session_state">
