--- a/genindex.html
+++ b/genindex.html
@@ -103,6 +103,8 @@
       </ul></li>
       <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._apply_question_templating">_apply_question_templating() (pyquizhub.core.engine.engine.QuizEngine method)</a>
 </li>
+      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._apply_templating_to_string">_apply_templating_to_string() (pyquizhub.core.engine.engine.QuizEngine method)</a>
+</li>
       <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._create_api_context">_create_api_context() (pyquizhub.core.engine.engine.QuizEngine method)</a>
 </li>
       <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager._execute">_execute() (pyquizhub.core.storage.sql_storage.SQLStorageManager method)</a>
